--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.8",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^11.2.0",
+    "astro": "^4.16.8",
     "typescript": "^5.6.3"
   }
 }
